--- a/resources/views/admin/posts/post-form.twig
+++ b/resources/views/admin/posts/post-form.twig
@@ -1,4 +1,4 @@
-{{ field('title', item.title, "Titre de l'article") }}
+{{ field('title', item.title, "Titre de l'article") }}{{ csrf() }}
 
 {{ field('slug', item.slug, "Le slug") }}
 
