--- a/resources/views/front/comments/comment-form.twig
+++ b/resources/views/front/comments/comment-form.twig
@@ -1,4 +1,4 @@
-<form class="comment-form">
+<form class="comment-form">{{ csrf() }}
     <div class="row">
         <div class="col-md-12">
             <textarea id="comment" name="comment" cols="45" rows="5" placeholder="Message *"></textarea>
