--- a/resources/views/front/contact/contact-form.twig
+++ b/resources/views/front/contact/contact-form.twig
@@ -1,4 +1,4 @@
-<form action="{{ path('contact.send') }}" method="POST" id="contact-form">
+<form action="{{ path('contact.send') }}" method="POST" id="contact-form">{{ csrf() }}
 
     <div class="row">
         <div class="col-md-6">
@@ -20,7 +20,7 @@
 
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 mb-4">
             {{ field('message', contact.message, "Votre message", {type: 'textarea'}) }}
         </div>
     </div>
@@ -28,7 +28,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="form-item">
-                <input type="submit" value="Envoyez votre message" class="submit">
+                <input type="submit" value="Envoyez" class="submit">
             </div>
         </div>
     </div>
